ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.5
    • Affects Version/s: 2.5.5
    • Component/s: Diagnostics
    • None
    • Environment:
      Windows
    • Fully Compatible
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When we hit an exception in Windows, we get a CONTEXT_RECORD. We then pass this context record to the DBGHelp to print the stack trace. DbgHelp mutates the CONTEXT_RECORD, but we pass the now mutated CONTEXT_RECORD which points to the bottom of the stack instead of the top the stack where the A/V occurs to MiniDumpWriteMinidump. As a result, we get a minidump that points to the wrong place, and is not useful for debugging windows issues.

            Assignee:
            Mark Benvenuto
            Reporter:
            Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: