SERVER-12374: Windows dumps have corrupted CONTEXT_RECORD